# IT_LR

./: .gitignore  .gitignore.txt  lr2_1.docx  lr2_2.docx  lr2_3.docx  lr2_4.docx  newfile.cpp
3/: Новый текстовый документ.txt
LR/: 1.16.csv
LR1/: .~lock.64.docx#  0.csv  1-22.csv  1.1..csv  1.1.csv  1.1.csv.csv  1.1.xlsx  1.12.csv  1.13.csv  1.13.xlsx  1.14.csv  1.15.csv  1.16.csv  1.16.xlsx  1.17.Id_3c0000000000244.csv  1.17.csv  1.17.csv.csv  1.18.csv  1.19.csv  1.2.csv  1.2.csv.csv  1.2.xlsx  1.20.csv  1.20.csv.txt  1.21.csv  1.21.csv.txt  1.21.xlsx  1.22.csv  1.22.csv.txt  1.22.xlsx  1.23.csv  1.24.csv  1.26.csv  1.26.csv.txt  1.26.xlsx  1.27..csv  1.27.csv  1.27.csv.txt  1.28.csv  1.28.xlsx  (+74 more)
LR10/: 10.docx  LR10.docx
LR11/: game.cpp
LR2/: $.Id_3c0000000000251  $.Id_3c0000000000254  $.Id_3c0000000000257  $.Id_3c000000000025a  $.Id_3c000000000025d  $.Id_3c0000000000260  $.Id_3c0000000000263  $.Id_3c000000000026c  $.Id_3c000000000026f  $.Id_3c0000000000275  1.docx  10.docx  100.docx  101.docx  102.docx  104.docx  106.docx  108.docx  109.docx  11.docx  110.docx  112.docx  12.docx  13.doc  13.docx  14.docx  15.docx  16.docx  17.docx  18.docx  19.docx  2.docx  2.txt  20.docx  21.docx  22.docx  22.txt  23.docx  24.docx  25.docx  (+137 more)
LR2_Additionally/: Оглавление.docx  Список клиентов.xlsx
LR3/: ._table_1_32.xlsx  ._~$table_1_32.xlsx  .~lock.table_1_23.ods#  .~lock.table_1_23.xlsx#  111.xlsx  92.xlsx  LR3  Table_1_8.xlsx  table1.ods  table_1.xlsx  table_1_1.xlsx  table_1_1.xlsx.xlsx  table_1_10.xlsx  table_1_100.xlsx  (+164 more)
LR9/: CMakeLists.txt
LR9/src/: main.cpp
(+141 files in other folders)
